refactor user address